# tech-challenge-TC4-lstm

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  mlflow.db  pyproject.toml
docs/: README.md  api.md  model.md
models/: lstm_model.keras  model.keras  scaler.pkl  scaler.save
notebooks/: 01_exploracao.ipynb  01_exploracao_e_treino.ipynb  02_treino.ipynb
scripts/: retreino_completo.py  teste_local.py
src/api/: main.py
src/ml/: data_loader.py  process.py  train.py
src/scripts/: cache_manager.py  data_processor.py  utils_train.py
tests/: payload.txt  teste_aws.py  teste_local.py
